[project]
name = "mcp-demo"
version = "0.1.0"
description = "AI Assistant with MCP Servers using LangChain and Groq"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.14",
    "mcp-use>=1.2.5",
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
langchain-groq = "^0.3.2"
playwright-mcp = "^0.1.0"
